--- a/apps/aritzia-scanner/src/views/partials/nav.ejs
+++ b/apps/aritzia-scanner/src/views/partials/nav.ejs
@@ -1,8 +1,10 @@
-<div class="nav">
-  <a href="/">Home (Newest)</a>
+<nav class="nav">
+  <a href="/">Newest</a>
   <a href="/products">All Products</a>
   <a href="/sale" class="nav-sale-link">Sale</a>
+  <a href="/categories">Categories</a>
   <a href="/restocks">Restocks</a>
   <a href="/colors">Colors</a>
+  <a href="/stores">Stores</a>
   <a href="/discontinued">Discontinued</a>
-</div>
+</nav>
